--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <select class="currency-select">
                 <option value="dolar">US$ dólar Americano</option>
                 <option value="euro"> €$ Euro</option>
-                <option value="libra">£$ libra</option>
+                <option value="Bitcoin">₿$ Bitcoin</option>
             </select>
         </label>
 
